@@ -1,3 +1,7 @@
+2004-03-11  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* config/x_ac_meta.m4: Added test for META file existence.
+
 2004-03-05  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* config/ac_check_peercred.m4, config/ac_debug.m4,
